# mcpygen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  IMPL.md  PLAN.md  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: publish_docs.yml  quality.yml  release.yml  test.yml  test_package.yml
docs/: AGENTS.md  apigen.md  approval.md  cli.md  client.md  index.md  installation.md  quickstart.md  toolserver.md
docs/api/: apigen.md  approval.md  toolrunner.md  toolserver.md
docs/internal/: README.md  architecture.md  testing.md
docs/internal/migration/: IMPL.md  PLAN.md  SPEC.md
docs/stylesheets/: extra.css
mcpy/: __init__.py  apigen.py  cli.py  client.py
mcpy/tool_exec/: __init__.py  client.py  server.py
mcpy/tool_exec/approval/: client.py  server.py
mcpygen/: __init__.py  apigen.py  cli.py  client.py  utils.py  vars.py
mcpygen/tool_exec/: __init__.py  client.py  server.py
mcpygen/tool_exec/approval/: client.py  server.py
tests/: AGENTS.md
tests/integration/: conftest.py  mcp_server.py  test_apigen.py  test_tool_approval.py  test_tool_exec.py
tests/unit/: test_apigen.py  test_approval_request.py  test_cli.py  test_replace_variables.py
