[project]
name = "mcpygen"
dynamic = ["version"]
description = "MCP tooling infrastructure: client, code generation, tool server, and approval workflow"
authors = [
    { name = "Martin Krasser", email = "martin@gradion.ai" },
]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "datamodel-code-generator>=0.49.0",
    "fastapi>=0.121.2",
    "mcp>=1.26.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "wsproto>=1.3.2",
]

[tool.uv]
default-groups = [
    "docs",
    "dev",
]
override-dependencies = [
    "sse-starlette==3.0.3",
]

[dependency-groups]
docs = [
    "griffe-pydantic>=1.1.8",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.48,<9.7.2",
    "mkdocstrings-python>=1.12.2,<2",
    "mkdocs-llmstxt>=0.4.0",
    "click<=8.2.1",
]
dev = [
    "invoke>=2.2,<3",
    "pre-commit>=4.3.0,<5",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
mcpygen = "mcpygen.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "default-unprefixed"
style = "pep440"

[tool.hatch.build.targets.sdist]
include = ["mcpygen"]

[tool.hatch.build.targets.wheel]
include = ["mcpygen"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    "aiofiles.*",
    "requests.*",
]
